--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,21 +4,25 @@
   <strong>Title:</strong>
   <%= @post.title %>
 </p>
-
-<%= form_for([@post, @post.comments.build]) do |f| %>
-    <%= f.text_area :content %>
-    <%= f.submit 'Leave a reply'%>
-<% end %>
-
 <%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
+<%= link_to 'Back', posts_path %><br><br>
+
+
+<%= form_with model: [@post, @comment], local: false do |f| %>
+    <%= f.text_field :content %>
+    <%= f.submit 'Leave a comment' %> 
+<% end %>
 
 <h2>コメント一覧 </h2> 
 
-<% @comments.each do |comment| %>
-  <%= comment.content %>
-  <%= link_to "delete", [comment.post, comment], method: :delete %>
-    <br>
-<% end %>
+<div id="cmt">
+	<% @comments.each do |comment| %>
+	  	<div id="<%= @post.id %>">
+	  		<%= render "comments/comment", comment: comment %>
+	    	<%= link_to "delete", [comment.post, comment], method: :delete %>
+		</div>
+		<br>
+	<% end %>
+</div>
 
 
