--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,4 +1,7 @@
-<div id="comment-<%= comment.id %>">
+<!-- <div id="comment-<%= comment.id %>"> -->
 	<%= comment.content %>
 	<%= link_to "delete", [comment.post, comment], method: :delete, remote: true %>
-</div>
+<!-- </div> -->
+
+<!-- remote: true がある場合、　=>　app/views/posts/...js.erb -->
+<!-- remote: true がない場合、　=>　app/views/posts/...html.erb -->
