--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -1,5 +1,6 @@
-<<<<<<< HEAD
-$('#cmt').prepend("<%= j render @comment %>");
-=======
-$('#cmt').prepend("<%= j render @comment %>");
->>>>>>> c58603550f3f5555fe1d0d82b01b39626de5eb0f
+// $('#cmt').prepend("<%= j render @comment %>");
+// $('#cmt').val("");
+
+// j (render @comment) の j は ActionView::Helpers::JavaScriptHelper#escape_javascriptの alias method
+//
+
