--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,15 +5,19 @@
 <table>
   <thead>
     <tr>
+      <th>ID</th>
       <th>Title</th>
-      <th colspan="3"></th>
+      <th colspan="5"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @posts.each do |post| %>
       <tr>
+        
+        <td><%= post.id %></td>
         <td><%= post.title %></td>
+        <td><%= pluralize(post.comments.count, "Comment") %></td>
         <td><%= link_to 'Show', post %></td>
         <td><%= link_to 'Edit', edit_post_path(post) %></td>
         <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -25,3 +29,4 @@
 <br>
 
 <%= link_to 'New Post', new_post_path %>
+
