--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,19 +5,34 @@
 <table>
   <thead>
     <tr>
-      <th>ID</th>
+      <th>ID
+
+      </th>
       <th>Title</th>
-      <th colspan="5"></th>
+      <th colspan="6"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @posts.each do |post| %>
+      
+      <% @comments = post.comments %>
+      <% @c = Comment.new %>
       <tr>
         
         <td><%= post.id %></td>
         <td><%= post.title %></td>
         <td><%= pluralize(post.comments.count, "Comment") %></td>
+        <td>
+          <%= form_with model: [post, @c], local: false do |f| %>
+            <%= f.text_field :content %>
+            <%= f.submit 'Leave a comment' %> 
+          <% end %>
+          <% @comments.each do |comment| %>
+              <%= render "comments/comment", comment: comment %>
+            <br>
+          <% end %>
+        </td>
         <td><%= link_to 'Show', post %></td>
         <td><%= link_to 'Edit', edit_post_path(post) %></td>
         <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -28,5 +43,27 @@
 
 <br>
 
-<%= link_to 'New Post', new_post_path %>
+<%= form_with(model: @post) do |form| %>
+  <% if @post.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(post.errors.count, "error") %> prohibited this post from being saved:</h2>
+
+      <ul>
+        <% @post.errors.each do |error| %>
+          <li><%= error.full_message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+  <div class="field">
+    <%= form.label :title %>
+    <%= form.text_area :title %>
+  </div>
+
+  <div class="actions">
+    <%= form.submit %>
+  </div>
+<% end %>
+
 
