--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,9 +13,39 @@
  *= require_tree .
  *= require_self
  */
+#favorite_link{
+	text-decoration: none;
+	padding: 4px;
 
- #favorite_link {
- 	color: red;
- 	border: solid 1px blue;
- }
+}
+
+/*#favorite_link::before {
+	content: url(assets/heart_fit.png);
+	height: 20%;
+	width: 20%;
+}
+*/
+
+
+/*#favorite_link.extra_stuff::before{
+  content: url(assets/heartred_fit.png);
+}
+*/
+
+.fav {
+	float: left;
+}
+
+.like {
+	background-image: url(assets/heartred_fit.png);
+	background-repeat: no-repeat;
+	height: 20px;
+	width: 20px;
+}
+
+#favorite_link:hover {
+	background-color: #ddd;
+	transition: 0.2s ease;
+}
+
 
