--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,8 +6,18 @@
   <br>
   <span style="font-size:500%;color:red;">&hearts;</span>
   <br>
-  <%= link_to favorite_text, favorites_update_path(post: @post), id: "favorite_link", remote: true, class: "fav" %>
+  
+  <% if favorite_text == "Favorite"   %>
+  	<div class="like fav", style="filter: grayscale(100%);"></div>
+  	<div><%= link_to favorite_text, favorites_update_path(post: @post), id: "favorite_link", class: "fav", style:"color:gray;",remote: true %><div>
+  <% else %>
+  	<div class="like fav", style="filter: grayscale(0%);"></div>
+  	<div><%= link_to favorite_text, favorites_update_path(post: @post), id: "favorite_link",class: "fav", style:"color:red;",remote: true %></div>
+  <% end %>
+	
+
 </p>
+<br><br>
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %><br><br>
 
