--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,8 @@
+
 <p id="notice"><%= notice %></p>
 
 <h1>Posts</h1>
+
 
 <table>
   <thead>
@@ -9,15 +11,21 @@
 
       </th>
       <th>Title</th>
-      <th colspan="6"></th>
+      <th colspan="9"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @posts.each do |post| %>
+      <% 
+        @favorite_exists = Favorite.where(post: post) == [] ? false : true
+        @comments = post.comments 
+        @c = Comment.new
+      %>
+      <%
+        
+      %>
       
-      <% @comments = post.comments %>
-      <% @c = Comment.new %>
       <tr>
         
         <td><%= post.id %></td>
@@ -26,13 +34,22 @@
         <td>
           <%= form_with model: [post, @c], local: false do |f| %>
             <%= f.text_field :content %>
-            <%= f.submit 'Leave a comment' %> 
+            <%= f.submit 'Leave a comment' %>
           <% end %>
           <% @comments.each do |comment| %>
               <%= render "comments/comment", comment: comment %>
             <br>
           <% end %>
         </td>
+        <td>
+          <%= @favorite_exists %>
+        </td>
+        <td>
+          <%= favorite_text %> <!-- always return as "Favorite", why???  -->
+        </td>
+         <td>
+          <%= render "favoritesImage", post: post %>
+        </td> 
         <td><%= link_to 'Show', post %></td>
         <td><%= link_to 'Edit', edit_post_path(post) %></td>
         <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
