--- a/app/views/posts/_favoritesImage.html.erb
+++ b/app/views/posts/_favoritesImage.html.erb
@@ -8,4 +8,8 @@
 		<script>console.log("UnFavorite");</script>
   <% end %>
 
-  <script>console.log("####################################");</script>
+ <script>
+  	console.log("####################################");
+	// var count = $("table .FavList #favorite_link").length;
+	// console.log(count);
+</script>
