--- a/app/views/favorites/UpdateIndex.js.erb
+++ b/app/views/favorites/UpdateIndex.js.erb
@@ -26,17 +26,18 @@ console.log(t);
 	// $( "table .FavList:nth-child(" + t + ") #favorite_link").css("color","gray");
 	// $( "table .FavList:nth-child(" + t + ") #favorite_link").text("Favorite");
 	// $( "table .FavList:nth-child(" + t + ") .like").css("filter", "grayscale(100%)");
-	$( "table tr:nth-child(" + t + ") #favorite_link").css("color","gray");
-	$( "table tr:nth-child(" + t + ") #favorite_link").text("Favorite");
-	$( "table tr:nth-child(" + t + ") .like").css("filter", "grayscale(100%)");
-<% else %>
+	$(".block:nth-child(" + t + ") #favorite_link").css("color","gray");
+	$(".block:nth-child(" + t + ") #favorite_link").text("Favorite");
+	$(".block:nth-child(" + t + ") .like").css("filter", "grayscale(100%)");
+<% end %>
+<% if @favorite_exists == true %>
 	console.log("@favorite_exists = true");
 	// $( "table .FavList:nth-child(" + t + ") #favorite_link").css("color","red");
 	// $( "table .FavList:nth-child(" + t + ") #favorite_link").text("UnFavorite");
 	// $( "table .FavList:nth-child(" + t + ") .like").css("filter", "grayscale(0%)");
-	$( "table tr:nth-child(" + t + ") #favorite_link").css("color","red");
-	$( "table tr:nth-child(" + t + ") #favorite_link").text("UnFavorite");
-	$( "table tr:nth-child(" + t + ") .like").css("filter", "grayscale(0%)");
+	$(".block:nth-child(" + t + ") #favorite_link").css("color","red");
+	$(".block:nth-child(" + t + ") #favorite_link").text("UnFavorite");
+	$(".block:nth-child(" + t + ") .like").css("filter", "grayscale(0%)");
 <% end %>
 
 
