--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -19,7 +19,7 @@
 </p>
 <br><br>
 <%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %><br><br>
+<%= link_to 'Back', root_path %><br><br>
 
 
 <%= form_with model: [@post, @comment], local: false do |f| %>
