--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,11 @@
  *= require_tree .
  *= require_self
  */
+
+.container {
+	width: 50vw;
+}
+
 #favorite_link{
 	text-decoration: none;
 	padding: 4px;
@@ -75,4 +80,20 @@
 .small {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 11px;
+}
+
+.cmt-gr:hover {
+	background-color: #E5E1D6;
+}
+
+.form-inline {
+	margin-top: 10px;
+}
+
+.cmt-box {
+	width: 100%;
+	height: 100px;
+	background-color: #eee;
+	border: 1px dotted black;
+	overflow: auto;
 }
