--- a/app/views/posts/_favoritesImage.html.erb
+++ b/app/views/posts/_favoritesImage.html.erb
@@ -10,6 +10,7 @@
 		<script>console.log("UnFavorite");</script>
 	<% end %>
 </div>
+&nbsp;&nbsp;&nbsp;&nbsp;<span class="small" id="favorites-count"><%= pluralize(post.favorites.count, "") %></small></h5>
  <script>
   	console.log("####################################");
 	// var count = $("table .FavList #favorite_link").length;
