--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,6 +1,7 @@
-<h1>Editing Post</h1>
+<h1 style="font-size: 40px">Editing Post</h1><br>
 
 <%= render 'form'%>
-
-<%= link_to 'Show', @post %> |
-<%= link_to 'Back', posts_path %>
+<br>
+<%= link_to 'Show', @post, class: "button is-info" %> 
+<%= link_to 'Back', posts_path, class: "button is-warning" %>
+<br><br><br><br>
