--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,6 @@
-<h1>New Post</h1>
+<h1 style="font-size: 40px">New Post</h1><br>
 
 <%= render 'form', post: @post %>
-
-<%= link_to 'Back', root_path %>
+<br>
+<%= link_to 'Back', root_path, class: "button is-warning" %>
+<br><br><br><br>
