--- a/app/views/favorites/UpdateIndex.js.erb
+++ b/app/views/favorites/UpdateIndex.js.erb
@@ -36,7 +36,7 @@ console.log(t);
 	// $( "table .FavList:nth-child(" + t + ") #favorite_link").text("Favorite");
 	// $( "table .FavList:nth-child(" + t + ") .like").css("filter", "grayscale(100%)");
 	$(".block:nth-child(" + t + ") #favorite_link").css("color","gray");
-	$(".block:nth-child(" + t + ") #favorite_link").text("Favorite");
+	$(".block:nth-child(" + t + ") #favorite_link").text("Love");
 	$(".block:nth-child(" + t + ") .like").css("filter", "grayscale(100%)");
 	$("#favorites-count").text(c);
 	console.log("test fav count in false");
@@ -47,7 +47,7 @@ console.log(t);
 	// $( "table .FavList:nth-child(" + t + ") #favorite_link").text("UnFavorite");
 	// $( "table .FavList:nth-child(" + t + ") .like").css("filter", "grayscale(0%)");
 	$(".block:nth-child(" + t + ") #favorite_link").css("color","red");
-	$(".block:nth-child(" + t + ") #favorite_link").text("UnFavorite");
+	$(".block:nth-child(" + t + ") #favorite_link").text("UnLove");
 	$(".block:nth-child(" + t + ") .like").css("filter", "grayscale(0%)");
 	$("#favorites-count").text(c);
 	console.log("test fav count in false");
